--- a/index.html
+++ b/index.html
@@ -246,8 +246,8 @@ document.getElementById("xal").innerHTML=c;
  					
  </script>
  
- <div id="sec"><b>SƏN</b><img class="esas" id="sensec" src="https://i.imgur.com/b9hkxqi.png"></div>
- <div id="komp">ANDROID<img id="andsec"class="esas" src="https://i.imgur.com/Mdn8Ue2.png"></div>
+ <div id="sec"><b>MƏN</b><img class="esas" id="sensec" src="https://i.imgur.com/b9hkxqi.png"></div>
+ <div id="komp">MANDROID<img id="andsec"class="esas" src="https://i.imgur.com/Mdn8Ue2.png"></div>
  
  
 <span id="xal1"><b>XAL :   </b></span><span id="xal"> 0 </span>
